<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/detail_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_wind_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_wind" />

            <TextView
                android:id="@+id/tv_wind_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_wind_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_wind"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp_1.5"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_humidity_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_humidity" />

            <TextView
                android:id="@+id/tv_humidity_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_humidity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_humidity"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp_1.5"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_temperature_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_temprature" />

            <TextView
                android:id="@+id/tv_temperature_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_temperature_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_temperature"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1.5"
        android:background="@color/divider_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sunrise_sunset_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_sunrise_sunset" />

            <TextView
                android:id="@+id/tv_sunrise_sunset_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_sunrise_sunset_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_sunrise_sunset"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp_1.5"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_pressure_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_pressure" />

            <TextView
                android:id="@+id/tv_pressure_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_pressure_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_pressure"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp_1.5"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_clouds_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_description"
                android:src="@drawable/icon_cloud" />

            <TextView
                android:id="@+id/tv_clouds_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_clouds_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/title_clouds"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1.5"
        android:background="@color/divider_background" />

</LinearLayout>